feat: implement core trading engine with lifecycle management and polling scheduler

--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,6 @@ PORT=8080
 
 # Database (localhost for local dev, postgres service name for Docker)
 DATABASE_URL="postgresql://postgres:password@localhost:5433/pmarbitrage?schema=public"
+
+# Trading Engine
+POLLING_INTERVAL_MS=30000  # 30 seconds for MVP
