--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ PORT=8080
 # For Docker: postgresql://postgres:password@postgres:5432/pmarbitrage?schema=public
 DATABASE_URL="postgresql://postgres:password@localhost:5433/pmarbitrage?schema=public"
 
+# Trading Engine
+POLLING_INTERVAL_MS=30000  # Polling cycle interval in milliseconds
+
 # Platform credentials (added in later stories)
 # KALSHI_API_KEY=
 # KALSHI_API_SECRET=
