--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    stop_grace_period: 15s
     networks:
       - pm-arbitrage-network
     restart: unless-stopped
