--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-fastify": "^11.1.13",
+    "@nestjs/schedule": "^6.1.1",
     "@prisma/client": "6",
     "prisma": "6",
     "reflect-metadata": "^0.2.2",
