feat: add Kalshi API integration with error handling and WebSocket support

--- a/.env.development
+++ b/.env.development
@@ -7,3 +7,8 @@ DATABASE_URL="postgresql://postgres:password@localhost:5433/pmarbitrage?schema=p
 
 # Trading Engine
 POLLING_INTERVAL_MS=30000  # 30 seconds for MVP
+
+# Kalshi API Configuration
+KALSHI_API_KEY_ID=your-key-id-here
+KALSHI_PRIVATE_KEY_PATH=./secrets/kalshi-demo-key.pem
+KALSHI_API_BASE_URL=https://demo-api.kalshi.co
