--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,10 @@ DATABASE_URL="postgresql://postgres:password@localhost:5433/pmarbitrage?schema=p
 # Trading Engine
 POLLING_INTERVAL_MS=30000  # Polling cycle interval in milliseconds
 
-# Platform credentials (added in later stories)
-# KALSHI_API_KEY=
-# KALSHI_API_SECRET=
+# Kalshi API Configuration
+KALSHI_API_KEY_ID=                          # Kalshi API Key ID (get from demo.kalshi.co dashboard)
+KALSHI_PRIVATE_KEY_PATH=./secrets/key.pem   # Path to RSA private key in PEM format (NOT committed to git)
+KALSHI_API_BASE_URL=https://demo-api.kalshi.co  # Demo: demo-api.kalshi.co | Prod: trading-api.kalshi.com
+
+# Polymarket (added in later stories)
 # POLYMARKET_PRIVATE_KEY=
