--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/platform-fastify": "^11.1.13",
     "@nestjs/schedule": "^6.1.1",
     "@prisma/client": "6",
