--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@nestjs/schedule": "^6.1.1",
     "@prisma/client": "6",
     "kalshi-typescript": "^3.6.0",
+    "nestjs-pino": "^4.1.0",
+    "pino-http": "^11.0.0",
     "prisma": "6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "uuid": "^13.0.0",
     "viem": "^2.45.3",
     "ws": "^8.19.0"
   },
@@ -44,6 +47,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^11.0.0",
     "@types/ws": "^8.18.1",
     "@vitest/coverage-v8": "^4.0.18",
     "eslint": "^9.18.0",
@@ -51,8 +55,11 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^30.0.0",
+    "pino": "^10.3.1",
+    "pino-pretty": "^11.2.2",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
+    "split2": "^4.2.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.2",
