--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@prisma/client": "6",
     "kalshi-typescript": "^3.6.0",
     "nestjs-pino": "^4.1.0",
+    "ntp-time-sync": "^0.5.0",
     "pino-http": "^11.0.0",
     "prisma": "6",
     "reflect-metadata": "^0.2.2",
