feat: integrate Polymarket connector with WebSocket support and error handling

--- a/.env.development
+++ b/.env.development
@@ -12,3 +12,9 @@ POLLING_INTERVAL_MS=30000  # 30 seconds for MVP
 KALSHI_API_KEY_ID=your-key-id-here
 KALSHI_PRIVATE_KEY_PATH=./secrets/kalshi-demo-key.pem
 KALSHI_API_BASE_URL=https://demo-api.kalshi.co
+
+# Polymarket Configuration
+POLYMARKET_PRIVATE_KEY=
+POLYMARKET_CLOB_API_URL=https://clob.polymarket.com
+POLYMARKET_WS_URL=wss://ws-subscriptions-clob.polymarket.com/ws/market
+POLYMARKET_CHAIN_ID=137
