--- a/.env.example
+++ b/.env.example
@@ -17,5 +17,8 @@ KALSHI_API_KEY_ID=                          # Kalshi API Key ID (get from demo.k
 KALSHI_PRIVATE_KEY_PATH=./secrets/key.pem   # Path to RSA private key in PEM format (NOT committed to git)
 KALSHI_API_BASE_URL=https://demo-api.kalshi.co  # Demo: demo-api.kalshi.co | Prod: trading-api.kalshi.com
 
-# Polymarket (added in later stories)
-# POLYMARKET_PRIVATE_KEY=
+# Polymarket Configuration
+POLYMARKET_PRIVATE_KEY=            # Wallet private key (hex, no 0x prefix)
+POLYMARKET_CLOB_API_URL=https://clob.polymarket.com
+POLYMARKET_WS_URL=wss://ws-subscriptions-clob.polymarket.com/ws/market
+POLYMARKET_CHAIN_ID=137
