--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "@nestjs/schedule": "^6.1.1",
     "@polymarket/clob-client": "^5.2.3",
     "@prisma/client": "6",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
+    "decimal.js": "^10.6.0",
+    "js-yaml": "^4.1.1",
     "kalshi-typescript": "^3.6.0",
     "nestjs-pino": "^4.1.0",
     "ntp-time-sync": "^0.5.0",
@@ -48,6 +52,7 @@
     "@swc/core": "^1.15.11",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^11.0.0",
