feat: implement edge calculation service for arbitrage opportunities with configuration validation and event handling

--- a/.env.development
+++ b/.env.development
@@ -18,3 +18,8 @@ POLYMARKET_PRIVATE_KEY=
 POLYMARKET_CLOB_API_URL=https://clob.polymarket.com
 POLYMARKET_WS_URL=wss://ws-subscriptions-clob.polymarket.com/ws/market
 POLYMARKET_CHAIN_ID=137
+
+# Edge Calculation (Story 3.3)
+DETECTION_MIN_EDGE_THRESHOLD=0.008
+DETECTION_GAS_ESTIMATE_USD=0.30
+DETECTION_POSITION_SIZE_USD=300
