--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,8 @@ POLYMARKET_PRIVATE_KEY=            # Wallet private key (hex, no 0x prefix)
 POLYMARKET_CLOB_API_URL=https://clob.polymarket.com
 POLYMARKET_WS_URL=wss://ws-subscriptions-clob.polymarket.com/ws/market
 POLYMARKET_CHAIN_ID=137
+
+# Edge Calculation (Story 3.3)
+DETECTION_MIN_EDGE_THRESHOLD=0.008    # Minimum net edge threshold (decimal, 0.008 = 0.8%)
+DETECTION_GAS_ESTIMATE_USD=0.30       # Static conservative gas estimate in USD
+DETECTION_POSITION_SIZE_USD=300       # Reference position size for edge % calculation
