feat: implement risk management module with configuration validation, state tracking, and position validation logic

--- a/.env.development
+++ b/.env.development
@@ -23,3 +23,8 @@ POLYMARKET_CHAIN_ID=137
 DETECTION_MIN_EDGE_THRESHOLD=0.008
 DETECTION_GAS_ESTIMATE_USD=0.30
 DETECTION_POSITION_SIZE_USD=300
+
+# Risk Management (Story 4.1)
+RISK_BANKROLL_USD=10000
+RISK_MAX_POSITION_PCT=0.03
+RISK_MAX_OPEN_PAIRS=10
