--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,8 @@ POLYMARKET_CHAIN_ID=137
 DETECTION_MIN_EDGE_THRESHOLD=0.008    # Minimum net edge threshold (decimal, 0.008 = 0.8%)
 DETECTION_GAS_ESTIMATE_USD=0.30       # Static conservative gas estimate in USD
 DETECTION_POSITION_SIZE_USD=300       # Reference position size for edge % calculation
+
+# Risk Management (Story 4.1)
+RISK_BANKROLL_USD=10000               # Total bankroll in USD
+RISK_MAX_POSITION_PCT=0.03            # Max position size as fraction of bankroll (0.03 = 3%)
+RISK_MAX_OPEN_PAIRS=10                # Maximum simultaneous open arbitrage pairs
