feat: add daily loss limit configuration and trading halt functionality to risk management module

--- a/.env.development
+++ b/.env.development
@@ -28,3 +28,4 @@ DETECTION_POSITION_SIZE_USD=300
 RISK_BANKROLL_USD=10000
 RISK_MAX_POSITION_PCT=0.03
 RISK_MAX_OPEN_PAIRS=10
+RISK_DAILY_LOSS_PCT=0.05
