--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,4 @@ DETECTION_POSITION_SIZE_USD=300       # Reference position size for edge % calcu
 RISK_BANKROLL_USD=10000               # Total bankroll in USD
 RISK_MAX_POSITION_PCT=0.03            # Max position size as fraction of bankroll (0.03 = 3%)
 RISK_MAX_OPEN_PAIRS=10                # Maximum simultaneous open arbitrage pairs
+RISK_DAILY_LOSS_PCT=0.05              # Daily loss limit as fraction of bankroll (0.05 = 5%)
