feat: implement operator override functionality in risk management module with API authentication and logging

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,6 @@ RISK_BANKROLL_USD=10000               # Total bankroll in USD
 RISK_MAX_POSITION_PCT=0.03            # Max position size as fraction of bankroll (0.03 = 3%)
 RISK_MAX_OPEN_PAIRS=10                # Maximum simultaneous open arbitrage pairs
 RISK_DAILY_LOSS_PCT=0.05              # Daily loss limit as fraction of bankroll (0.05 = 5%)
+
+# Operator API Authentication (Story 4.3)
+OPERATOR_API_TOKEN=dev-token-change-me  # Static Bearer token for operator dashboard endpoints
