--- a/.env.development
+++ b/.env.development
@@ -29,3 +29,6 @@ RISK_BANKROLL_USD=10000
 RISK_MAX_POSITION_PCT=0.03
 RISK_MAX_OPEN_PAIRS=10
 RISK_DAILY_LOSS_PCT=0.05
+
+# Operator API Authentication (Story 4.3)
+OPERATOR_API_TOKEN=dev-token-change-me
