feat: implement paper trading mode with simulated order fills, latency, and slippage handling for Kalshi and Polymarket connectors

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,11 @@ RISK_DAILY_LOSS_PCT=0.05              # Daily loss limit as fraction of bankroll
 
 # Operator API Authentication (Story 4.3)
 OPERATOR_API_TOKEN=dev-token-change-me  # Static Bearer token for operator dashboard endpoints
+
+# Paper Trading Mode (Story 5.5.1)
+PLATFORM_MODE_KALSHI=live              # Platform mode: live | paper (default: live)
+PLATFORM_MODE_POLYMARKET=live          # Platform mode: live | paper (default: live)
+PAPER_FILL_LATENCY_MS_KALSHI=150       # Simulated fill latency in ms (paper mode only)
+PAPER_SLIPPAGE_BPS_KALSHI=5            # Simulated slippage in basis points (paper mode only)
+PAPER_FILL_LATENCY_MS_POLYMARKET=800   # Simulated fill latency in ms (paper mode only, reflects on-chain)
+PAPER_SLIPPAGE_BPS_POLYMARKET=15       # Simulated slippage in basis points (paper mode only)
