--- a/.env.development
+++ b/.env.development
@@ -32,3 +32,11 @@ RISK_DAILY_LOSS_PCT=0.05
 
 # Operator API Authentication (Story 4.3)
 OPERATOR_API_TOKEN=dev-token-change-me
+
+# Paper Trading Mode (Story 5.5.1)
+PLATFORM_MODE_KALSHI=paper             # Dev default: paper mode
+PLATFORM_MODE_POLYMARKET=paper         # Dev default: paper mode
+PAPER_FILL_LATENCY_MS_KALSHI=150       # Simulated fill latency in ms
+PAPER_SLIPPAGE_BPS_KALSHI=5            # Simulated slippage in basis points
+PAPER_FILL_LATENCY_MS_POLYMARKET=800   # Simulated fill latency in ms (reflects on-chain)
+PAPER_SLIPPAGE_BPS_POLYMARKET=15       # Simulated slippage in basis points
