feat: enhance event handling by adding isPaper and mixedMode flags to execution events, update environment configurations for mixed mode support

--- a/.env.development
+++ b/.env.development
@@ -40,3 +40,4 @@ PAPER_FILL_LATENCY_MS_KALSHI=150       # Simulated fill latency in ms
 PAPER_SLIPPAGE_BPS_KALSHI=5            # Simulated slippage in basis points
 PAPER_FILL_LATENCY_MS_POLYMARKET=800   # Simulated fill latency in ms (reflects on-chain)
 PAPER_SLIPPAGE_BPS_POLYMARKET=15       # Simulated slippage in basis points
+ALLOW_MIXED_MODE=true                  # Dev default: mixed mode allowed
