--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,4 @@ PAPER_FILL_LATENCY_MS_KALSHI=150       # Simulated fill latency in ms (paper mod
 PAPER_SLIPPAGE_BPS_KALSHI=5            # Simulated slippage in basis points (paper mode only)
 PAPER_FILL_LATENCY_MS_POLYMARKET=800   # Simulated fill latency in ms (paper mode only, reflects on-chain)
 PAPER_SLIPPAGE_BPS_POLYMARKET=15       # Simulated slippage in basis points (paper mode only)
+ALLOW_MIXED_MODE=false                 # Allow one platform live + one paper (default: false)
