feat: implement dynamic gas estimation for Polymarket, including service integration, event emissions, and configuration updates

--- a/.env.development
+++ b/.env.development
@@ -24,6 +24,13 @@ DETECTION_MIN_EDGE_THRESHOLD=0.008
 DETECTION_GAS_ESTIMATE_USD=0.30
 DETECTION_POSITION_SIZE_USD=300
 
+# Gas Estimation (Story 6.0)
+POLYMARKET_RPC_URL=https://polygon-rpc.com
+GAS_BUFFER_PERCENT=20
+GAS_POLL_INTERVAL_MS=30000
+GAS_POL_PRICE_FALLBACK_USD=0.40
+POLYMARKET_SETTLEMENT_GAS_UNITS=150000
+
 # Risk Management (Story 4.1)
 RISK_BANKROLL_USD=10000
 RISK_MAX_POSITION_PCT=0.03
