--- a/.env.example
+++ b/.env.example
@@ -25,8 +25,15 @@ POLYMARKET_CHAIN_ID=137
 
 # Edge Calculation (Story 3.3)
 DETECTION_MIN_EDGE_THRESHOLD=0.008    # Minimum net edge threshold (decimal, 0.008 = 0.8%)
-DETECTION_GAS_ESTIMATE_USD=0.30       # Static conservative gas estimate in USD
+DETECTION_GAS_ESTIMATE_USD=0.30       # Static fallback gas estimate in USD (used when dynamic estimation unavailable)
 DETECTION_POSITION_SIZE_USD=300       # Reference position size for edge % calculation
+
+# Gas Estimation (Story 6.0) — dynamic gas estimation for Polymarket on-chain settlement
+POLYMARKET_RPC_URL=https://polygon-rpc.com             # Polygon RPC endpoint for gas price queries
+GAS_BUFFER_PERCENT=20                                   # Safety buffer applied to gas estimate (20 = 20%)
+GAS_POLL_INTERVAL_MS=30000                              # Gas/POL price polling interval in milliseconds
+GAS_POL_PRICE_FALLBACK_USD=0.40                         # Fallback POL/USD price if CoinGecko unavailable
+POLYMARKET_SETTLEMENT_GAS_UNITS=150000                  # Gas units for CTF Exchange settlement tx
 
 # Risk Management (Story 4.1)
 RISK_BANKROLL_USD=10000               # Total bankroll in USD
