feat: add monitoring module with Telegram alerting capabilities, including configuration updates, error handling, and message formatting for real-time notifications

--- a/.env.development
+++ b/.env.development
@@ -48,3 +48,13 @@ PAPER_SLIPPAGE_BPS_KALSHI=5            # Simulated slippage in basis points
 PAPER_FILL_LATENCY_MS_POLYMARKET=800   # Simulated fill latency in ms (reflects on-chain)
 PAPER_SLIPPAGE_BPS_POLYMARKET=15       # Simulated slippage in basis points
 ALLOW_MIXED_MODE=true                  # Dev default: mixed mode allowed
+
+# Telegram Alerts (Story 6.1) — disabled in dev by default (empty token/chatId)
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
+TELEGRAM_TEST_ALERT_CRON=0 8 * * *
+TELEGRAM_TEST_ALERT_TIMEZONE=UTC
+TELEGRAM_SEND_TIMEOUT_MS=2000
+TELEGRAM_MAX_RETRIES=3
+TELEGRAM_BUFFER_MAX_SIZE=100
+TELEGRAM_CIRCUIT_BREAK_MS=60000
