--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,13 @@ PAPER_SLIPPAGE_BPS_KALSHI=5            # Simulated slippage in basis points (pap
 PAPER_FILL_LATENCY_MS_POLYMARKET=800   # Simulated fill latency in ms (paper mode only, reflects on-chain)
 PAPER_SLIPPAGE_BPS_POLYMARKET=15       # Simulated slippage in basis points (paper mode only)
 ALLOW_MIXED_MODE=false                 # Allow one platform live + one paper (default: false)
+
+# Telegram Alerts (Story 6.1) — real-time monitoring via Telegram Bot API
+TELEGRAM_BOT_TOKEN=                            # Telegram bot token (from @BotFather)
+TELEGRAM_CHAT_ID=                              # Telegram chat ID for alerts
+TELEGRAM_TEST_ALERT_CRON=0 8 * * *            # Daily test alert cron (default: 8am UTC)
+TELEGRAM_TEST_ALERT_TIMEZONE=UTC               # Timezone for test alert cron
+TELEGRAM_SEND_TIMEOUT_MS=2000                  # HTTP timeout for Telegram API calls (ms)
+TELEGRAM_MAX_RETRIES=3                         # Consecutive failures before circuit breaker opens
+TELEGRAM_BUFFER_MAX_SIZE=100                   # Max buffered messages (priority queue)
+TELEGRAM_CIRCUIT_BREAK_MS=60000                # Circuit breaker open duration (ms)
