feat: implement CSV trade logging and daily summary generation, including configuration updates, service integration, and error handling for monitoring events

--- a/.env.development
+++ b/.env.development
@@ -58,3 +58,8 @@ TELEGRAM_SEND_TIMEOUT_MS=2000
 TELEGRAM_MAX_RETRIES=3
 TELEGRAM_BUFFER_MAX_SIZE=100
 TELEGRAM_CIRCUIT_BREAK_MS=60000
+
+# CSV Trade Logging (Story 6.3)
+CSV_TRADE_LOG_DIR=./data/trade-logs
+CSV_ENABLED=true
+# Daily summary runs at UTC midnight (hardcoded @Cron in DailySummaryService)
