--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,8 @@ TELEGRAM_SEND_TIMEOUT_MS=2000                  # HTTP timeout for Telegram API c
 TELEGRAM_MAX_RETRIES=3                         # Consecutive failures before circuit breaker opens
 TELEGRAM_BUFFER_MAX_SIZE=100                   # Max buffered messages (priority queue)
 TELEGRAM_CIRCUIT_BREAK_MS=60000                # Circuit breaker open duration (ms)
+
+# CSV Trade Logging (Story 6.3) — trade logs and daily summaries
+CSV_TRADE_LOG_DIR=./data/trade-logs            # Directory for daily CSV trade log files
+CSV_ENABLED=true                                # Enable/disable CSV trade logging
+# Daily summary runs at UTC midnight (hardcoded @Cron in DailySummaryService)
