feat: implement compliance validation for trade gating, including configuration loading, event emissions for compliance violations, and integration into execution logic

--- a/.env.development
+++ b/.env.development
@@ -63,3 +63,6 @@ TELEGRAM_CIRCUIT_BREAK_MS=60000
 CSV_TRADE_LOG_DIR=./data/trade-logs
 CSV_ENABLED=true
 # Daily summary runs at UTC midnight (hardcoded @Cron in DailySummaryService)
+
+# Compliance Validation (Story 6.4)
+COMPLIANCE_MATRIX_CONFIG_PATH=config/compliance-matrix.yaml
