--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,6 @@ TELEGRAM_CIRCUIT_BREAK_MS=60000                # Circuit breaker open duration (
 CSV_TRADE_LOG_DIR=./data/trade-logs            # Directory for daily CSV trade log files
 CSV_ENABLED=true                                # Enable/disable CSV trade logging
 # Daily summary runs at UTC midnight (hardcoded @Cron in DailySummaryService)
+
+# Compliance Validation (Story 6.4) — trade gating against compliance matrix
+COMPLIANCE_MATRIX_CONFIG_PATH=config/compliance-matrix.yaml  # Path to compliance matrix YAML config
