--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   },
   "dependencies": {
     "@ethersproject/wallet": "^5.8.0",
+    "@fastify/static": "^9.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^11.0.1",
     "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/platform-fastify": "^11.1.13",
     "@nestjs/schedule": "^6.1.1",
+    "@nestjs/swagger": "^11.2.6",
     "@polymarket/clob-client": "^5.2.3",
     "@prisma/client": "6",
     "class-transformer": "^0.5.1",
@@ -50,7 +52,6 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@swc/core": "^1.15.11",
-    "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.10.7",
@@ -63,14 +64,12 @@
     "eslint-plugin-prettier": "^5.2.2",
     "fast-check": "^4.5.3",
     "globals": "^16.0.0",
-    "jest": "^30.0.0",
     "pino": "^10.3.1",
     "pino-pretty": "^11.2.2",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "split2": "^4.2.0",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
