feat: update Kalshi API integration with new base URL, enhance orderbook structure in TypeScript definitions, and implement contract pair configuration for data ingestion

--- a/.env.development
+++ b/.env.development
@@ -11,7 +11,7 @@ POLLING_INTERVAL_MS=30000  # 30 seconds for MVP
 # Kalshi API Configuration
 KALSHI_API_KEY_ID=your-key-id-here
 KALSHI_PRIVATE_KEY_PATH=./secrets/kalshi-demo-key.pem
-KALSHI_API_BASE_URL=https://demo-api.kalshi.co
+KALSHI_API_BASE_URL=https://api.elections.kalshi.com/trade-api/v2
 
 # Polymarket Configuration
 POLYMARKET_PRIVATE_KEY=
