--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "decimal.js": "^10.6.0",
+    "dotenv": "^17.3.1",
     "js-yaml": "^4.1.1",
     "kalshi-typescript": "^3.6.0",
     "nestjs-pino": "^4.1.0",
