feat: add dashboard module with WebSocket support, including event handling for platform health, execution updates, and alerts, along with corresponding service and controller implementations

--- a/.env.development
+++ b/.env.development
@@ -66,3 +66,6 @@ CSV_ENABLED=true
 
 # Compliance Validation (Story 6.4)
 COMPLIANCE_MATRIX_CONFIG_PATH=config/compliance-matrix.yaml
+
+# Dashboard (Story 7.1)
+DASHBOARD_ORIGIN=http://localhost:3000
