--- a/.env.example
+++ b/.env.example
@@ -70,3 +70,6 @@ CSV_ENABLED=true                                # Enable/disable CSV trade loggi
 
 # Compliance Validation (Story 6.4) — trade gating against compliance matrix
 COMPLIANCE_MATRIX_CONFIG_PATH=config/compliance-matrix.yaml  # Path to compliance matrix YAML config
+
+# Dashboard (Story 7.1) — operator dashboard CORS origin
+DASHBOARD_ORIGIN=http://localhost:5173    # Dashboard SPA origin for CORS (dev default)
