--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/platform-fastify": "^11.1.13",
+    "@nestjs/platform-ws": "^11.1.14",
     "@nestjs/schedule": "^6.1.1",
     "@nestjs/swagger": "^11.2.6",
+    "@nestjs/websockets": "^11.1.14",
     "@polymarket/clob-client": "^5.2.3",
     "@prisma/client": "6",
     "class-transformer": "^0.5.1",
